[package]
name = "savra"
version = "0.1.0"
edition = "2018"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version="0.8", features= ["v4"]}
convert_case = "0.4"
structopt = "0.3"
strum = { version = "0.21", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
glob = "0.3"
convert_case = "0.4"



